--- a/src/app.html
+++ b/src/app.html
@@ -2,8 +2,14 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="icon" href="%sveltekit.assets%/img/icon.png" />
+		<title>Careific: Monitor Your Senior</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<style>
+			html {
+				scroll-behavior: smooth;
+			}
+		</style>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
