Added home page

--- a/src/app.html
+++ b/src/app.html
@@ -9,6 +9,9 @@
 			html {
 				scroll-behavior: smooth;
 			}
+			body {
+				font-family: "Inter", sans-serif;
+			}
 		</style>
 		%sveltekit.head%
 	</head>
