--- a/src/app.html
+++ b/src/app.html
@@ -15,7 +15,7 @@
 		</style>
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover">
+	<body data-sveltekit-preload-data="hover" class="overflow-x-hidden">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
