--- a/src/app.html
+++ b/src/app.html
@@ -17,5 +17,22 @@
 	</head>
 	<body data-sveltekit-preload-data="hover" class="overflow-x-hidden">
 		<div style="display: contents">%sveltekit.body%</div>
+
+		<script src="https://unpkg.com/scrollreveal"></script>
+    	<script>
+			window.addEventListener('load', () => {
+				revealFunction();
+			})
+			
+			function revealFunction(){
+				window.sr = ScrollReveal({ duration:1000, distance:'50px', easing:'ease-out'});
+			
+				sr.reveal('.reveal-left', {origin:'left', reset:false});
+				sr.reveal('.reveal-top', {origin:'top', reset:false});
+				sr.reveal('.reveal-bottom', {origin:'bottom', reset:false});
+				sr.reveal('.reveal-right', {origin:'right', reset:false});
+				sr.reveal('.reveal-rotate', {origin:'bottom', rotate:{x:1000, z:1000}, reset:false});
+			}
+		</script>
 	</body>
 </html>
