Changed spaces url

--- a/src/app.html
+++ b/src/app.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="https://juju222.sgp1.cdn.digitaloceanspaces.com/careific/icon.webp" />
+		<link rel="icon" href="https://juju.sgp1.cdn.digitaloceanspaces.com/careific/icon.webp" />
 		<title>Careific: Monitor Your Senior</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<style>
